// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BidTrackerCardContainerComponent matches snapshot when priorityExists is false 1`] = `
<div
  className="bid-tracker-container"
>
  <BidTrackerCard
    acceptBid={[Function]}
    bid={
      Object {
        "approved_date": "2017-12-20",
        "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
        "closed_date": "2017-12-20",
        "create_date": "2017-12-20",
        "declined_date": "2017-12-20",
        "draft_date": "2017-12-20",
        "handshake_accepted_date": "2017-12-20",
        "handshake_declined_date": "2017-12-20",
        "handshake_offered_date": "2017-12-20",
        "id": 3,
        "in_panel_date": "2017-12-20",
        "position": Object {
          "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
          "create_date": "2015-08-05",
          "grade": "03",
          "id": 226,
          "position_number": "10035561",
          "post": Object {
            "id": 199,
            "location": "Curacao",
          },
          "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
          "title": "POLITICAL/ECONOMIC OFFICER",
          "update_date": "2017-06-08",
        },
        "reviewer": Object {
          "email": "woodwardw@state.gov",
          "first_name": "Wendy",
          "is_cdo": false,
          "last_name": "Woodward",
          "phone_number": "555-555-5555",
          "username": "woodwardw",
        },
        "scheduled_panel_date": "2017-12-20",
        "status": "approved",
        "submitted_date": "2017-12-20",
        "update_date": "2017-12-20",
        "user": "rehmant",
      }
    }
    declineBid={[Function]}
    userProfile={
      Object {
        "bid_statistics": Array [
          Object {
            "draft": 1,
            "submitted": 1,
          },
        ],
        "cdo": Object {
          "email": "shadtrachl@state.gov",
          "first_name": "Leah",
          "last_name": "Shadtrach",
        },
        "is_cdo": false,
        "skill_code": Array [
          "INFORMATION MANAGEMENT (2880)",
          "ADMINISTRATIVE SUPPORT (2080)",
        ],
        "user": Object {
          "email": "doej@state.gov",
          "first_name": "John",
          "last_name": "Doe",
          "username": "jdoe",
        },
      }
    }
  />
</div>
`;

exports[`BidTrackerCardContainerComponent matches snapshot when priorityExists is true and isPriority is false 1`] = `
<div
  className="bid-tracker-container"
>
  <IsOnStandby
    bid={
      Object {
        "approved_date": "2017-12-20",
        "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
        "closed_date": "2017-12-20",
        "create_date": "2017-12-20",
        "declined_date": "2017-12-20",
        "draft_date": "2017-12-20",
        "handshake_accepted_date": "2017-12-20",
        "handshake_declined_date": "2017-12-20",
        "handshake_offered_date": "2017-12-20",
        "id": 3,
        "in_panel_date": "2017-12-20",
        "position": Object {
          "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
          "create_date": "2015-08-05",
          "grade": "03",
          "id": 226,
          "position_number": "10035561",
          "post": Object {
            "id": 199,
            "location": "Curacao",
          },
          "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
          "title": "POLITICAL/ECONOMIC OFFICER",
          "update_date": "2017-06-08",
        },
        "reviewer": Object {
          "email": "woodwardw@state.gov",
          "first_name": "Wendy",
          "is_cdo": false,
          "last_name": "Woodward",
          "phone_number": "555-555-5555",
          "username": "woodwardw",
        },
        "scheduled_panel_date": "2017-12-20",
        "status": "approved",
        "submitted_date": "2017-12-20",
        "update_date": "2017-12-20",
        "user": "rehmant",
      }
    }
  />
</div>
`;

exports[`BidTrackerCardContainerComponent matches snapshot when priorityExists is true and isPriority is true 1`] = `
<div
  className="bid-tracker-container"
>
  <IsPriority>
    <BidTrackerCard
      acceptBid={[Function]}
      bid={
        Object {
          "approved_date": "2017-12-20",
          "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
          "closed_date": "2017-12-20",
          "create_date": "2017-12-20",
          "declined_date": "2017-12-20",
          "draft_date": "2017-12-20",
          "handshake_accepted_date": "2017-12-20",
          "handshake_declined_date": "2017-12-20",
          "handshake_offered_date": "2017-12-20",
          "id": 3,
          "in_panel_date": "2017-12-20",
          "position": Object {
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "create_date": "2015-08-05",
            "grade": "03",
            "id": 226,
            "position_number": "10035561",
            "post": Object {
              "id": 199,
              "location": "Curacao",
            },
            "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
            "title": "POLITICAL/ECONOMIC OFFICER",
            "update_date": "2017-06-08",
          },
          "reviewer": Object {
            "email": "woodwardw@state.gov",
            "first_name": "Wendy",
            "is_cdo": false,
            "last_name": "Woodward",
            "phone_number": "555-555-5555",
            "username": "woodwardw",
          },
          "scheduled_panel_date": "2017-12-20",
          "status": "approved",
          "submitted_date": "2017-12-20",
          "update_date": "2017-12-20",
          "user": "rehmant",
        }
      }
      declineBid={[Function]}
      userProfile={
        Object {
          "bid_statistics": Array [
            Object {
              "draft": 1,
              "submitted": 1,
            },
          ],
          "cdo": Object {
            "email": "shadtrachl@state.gov",
            "first_name": "Leah",
            "last_name": "Shadtrach",
          },
          "is_cdo": false,
          "skill_code": Array [
            "INFORMATION MANAGEMENT (2880)",
            "ADMINISTRATIVE SUPPORT (2080)",
          ],
          "user": Object {
            "email": "doej@state.gov",
            "first_name": "John",
            "last_name": "Doe",
            "username": "jdoe",
          },
        }
      }
    />
  </IsPriority>
</div>
`;
